# ipphone

./: COPYING  LICENSE  README.md  cibuild.sh  meson.build  meson_options.txt
misc/: cibuild.sh  cimatrix.yaml
src/: error_info.cxx  error_info.hxx  ipp_exception.hxx  ippbin.cxx  log_levels.hxx  main.cxx  meson.build  version.hxx.in
src/internal/: log_console_sink.cxx  log_console_sink.hxx
src/ipp/: error_info.cxx  error_info.hxx  ipp_exception.hxx  ipp_system_exception.hxx  ipphone.cxx  ipphone.hxx  main.cxx  meson.build  misc.hxx  shared_fd.h  unique_fd.h
src/ipp/channel/: channel_wrapper.hxx  file_channel.cxx  file_channel.hxx  sound_channel.cxx  sound_channel.hxx  video_decoder_channel.cxx  video_decoder_channel.hxx  video_encoder_channel.cxx  video_encoder_channel.hxx
src/ipp/device/: handler.cxx  handler.hxx  sox_read_handler.cxx  sox_read_handler.hxx  sox_write_handler.cxx  sox_write_handler.hxx
src/ipp/logger/: log_console_sink.cxx  log_console_sink.hxx  logger.hxx
src/ipp/network/: socket.cxx  socket.hxx  socket_address.cxx  socket_address.hxx  socket_connection.cxx  socket_connection.hxx  socket_exception.hxx
src/ipp/protocol/: connection.cxx  connection.hxx  connection_manager.cxx  connection_manager.hxx  ippp.cxx  ippp.hxx  protocol_exception.hxx  protocol_listener.hxx
src/ipp/protocol/channel/: channel_flag.hxx  channel_type.hxx  sound_encode_type.hxx  sound_header.hxx
src/ipp/protocol/message/: channel_flag.hxx  channel_type.hxx  message.hxx  message_channel.hxx  message_connection.hxx  message_type.hxx
src/ipp/protocol/packet/: packet.hxx  packet_builder.cxx  packet_builder.hxx  packet_flag.hxx
src/ipp/util/: buffer.hxx
src/ipp/util/detail/: buffer.hxx
src/ippbin/: logger.cxx  logger.hxx  sixel_animation.cxx  sixel_animation.hxx  terminal.cxx  terminal.hxx
src/ippbin/command/: command.hxx  command_exception.hxx  phone.cxx  timeout.cxx  timeout.hxx
src/network/: address.hxx  socket.cxx  socket.hxx  socket_address.hxx  socket_connection.cxx  socket_connection.hxx  socket_exception.cxx  socket_exception.hxx
src/protocol/: ippp.cxx  ippp.hxx
src/protocol/message/: message.hxx  message_type.hxx
src/protocol/packet/: packet.cxx  packet_flag.hxx
src/sox/: format.cxx  format.hxx  meson.build
subprojects/: g3log.wrap
test/: meson.build
test/ipp/util/: buffer_test.cxx  buffer_test_mt.cxx  buffer_test_mt_timeout.cxx
